--- a/src/main/resources/static/package.json
+++ b/src/main/resources/static/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
     "@yaireo/tagify": "^3.8.0",
     "bootstrap": "^4.4.1",
     "bootstrap-toggle": "^2.2.2",
