--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.open-in-view: false
 spring.jpa.show-sql: true
 spring.jpa.hibernate.format_sql: true
-spring.jpa.hibernate.ddl-auto: create
+spring.jpa.hibernate.ddl-auto: update
 
 # logging
 logging.level.org.hibernate.SQL: DEBUG
