--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,9 @@ spring.jpa.show-sql: true
 spring.jpa.hibernate.format_sql: true
 spring.jpa.hibernate.ddl-auto: update
 
+# configure session timeout
+server.servlet.session.timeout=30m
+
 # logging
 logging.level.org.hibernate.SQL: DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder: TRACE
