--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,32 +1,59 @@
-#Mysql
-spring.datasource.url: jdbc:mysql://localhost:3306/sangdaero?serverTimezone=UTC&characterEncoding=UTF-8
-spring.datasource.username: root
-spring.datasource.password: whitehack-96
+# local server
+spring.datasource.url=jdbc:mysql://localhost:3306/springboot
+spring.datasource.username=junseo
+spring.datasource.password=pass
 
-# only for board testing! board db autocreate
-spring.jpa.database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.open-in-view: false
-spring.jpa.show-sql: true
-spring.jpa.hibernate.format_sql: true
-spring.jpa.hibernate.ddl-auto: update
+# cafe24 server
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/saevom06?serverTimezone=UTC
+#spring.datasource.username=saevom06
+#spring.datasource.password=stipsy1.5!
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.use-new-id-generator-mappings= false
+
+logging.level.org.hibernate.type.descriptor.sql=trace
 
 # configure session timeout
 server.servlet.session.timeout=30m
 
-# logging
-logging.level.org.hibernate.SQL: DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder: TRACE
-
 # google social login
-spring.security.oauth2.client.registration.google.client-id=524852590242-mb9pjfpgi242mjbh4o8iu3conascjo6e.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=70d8k0TbBpUsCjIQh1s36Rj9
+#spring.security.oauth2.client.registration.google.client-id=524852590242-mb9pjfpgi242mjbh4o8iu3conascjo6e.apps.googleusercontent.com
+#spring.security.oauth2.client.registration.google.client-secret=70d8k0TbBpUsCjIQh1s36Rj9
+spring.security.oauth2.client.registration.google.client-id=5105774249-qmq3ap1os30vl8b2rgtaevoglrrvts2c.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=qZIw7nmqKgzSTV_1M3Qst8fi
 
-#spring.http.converters.preferred-json-mapper=gson
+# push notification
+app.firebase-configuration-file=google/sangdaero-firebase-adminsdk-3ozm6-0620ecdfb7.json
+app.notifications.defaults={topic: 'common', title: 'Common topic - Hello', message: 'Sending test message \uD83D\uDE42', token: 'ss22t03wz208eg:APA2idkkow223FE_0v5yHxqCLTyxAQafj6nWaqi4QzwZTW004q1PUux63UsFN', payloadMessageId: '123', payloadData: 'Hello. This is payload content.'}
 
+# File
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=215MB
 #file.upload-dir=./src/main/resources/static/images
 file.upload-dir=./tomcat/webapps/ROOT/WEB-INF/classes/static/images
-app.firebase-configuration-file=google/sangdaero-firebase-adminsdk-3ozm6-0620ecdfb7.json
-app.notifications.defaults={topic: 'common', title: 'Common topic - Hello', message: 'Sending test message \uD83D\uDE42', token: 'ss22t03wz208eg:APA2idkkow223FE_0v5yHxqCLTyxAQafj6nWaqi4QzwZTW004q1PUux63UsFN', payloadMessageId: '123', payloadData: 'Hello. This is payload content.'}
+
+# Excel
+spring.mvc.contentnegotiation.favor-parameter=true
+spring.mvc.contentnegotiation.favor-path-extension=true
+spring.mvc.contentnegotiation.media-types.xls=application/vnd.ms-excel
+
+#Mysql
+#spring.datasource.url: jdbc:mysql://localhost:3306/sangdaero?serverTimezone=UTC&characterEncoding=UTF-8
+#spring.datasource.username: root
+#spring.datasource.password: whitehack-96
+
+
+# only for board testing! board db autocreate
+# spring.jpa.database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+# spring.jpa.open-in-view: false
+# spring.jpa.show-sql: true
+# spring.jpa.hibernate.format_sql: true
+# spring.jpa.hibernate.ddl-auto: create
+
+# logging
+# logging.level.org.hibernate.SQL: DEBUG
+# logging.level.org.hibernate.type.descriptor.sql.BasicBinder: TRACE
